Bug 431336 - Angle snapping doesn't work using the Bezier Curve Selection Tool
Summary: Angle snapping doesn't work using the Bezier Curve Selection Tool
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Tools/Selection (other bugs)
Version First Reported In: git master (please specify the git hash!)
Platform: Manjaro Linux
: NOR normal
Target Milestone: ---
Assignee: tomtomtomreportingin
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-01-08 22:09 UTC by Deif Lou
Modified: 2021-08-30 16:09 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Deif Lou 2021-01-08 22:09:04 UTC
SUMMARY
Angle snapping doesn't work using the Bezier Curve Selection Tool

STEPS TO REPRODUCE
1. Open Krita and an image
2. Select the "Bezier Curve Selection Tool"
3. In the tool options select "activate angle snap"
4. Make a selection in the canvas

OBSERVED RESULT
The tool makes a selection but the segments don't snap to the multiples of the chosen angle

EXPECTED RESULT
The segments should snap to the multiples of the chosen angle

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 5.20.4
KDE Frameworks Version: 5.77.0
Qt Version: 5.15.2
Comment 1 Halla Rempt 2021-01-26 12:18:28 UTC
Git commit c8af27317cd43f9547a9ce11e9be82a835d9a081 by Halla Rempt.
Committed on 26/01/2021 at 12:16.
Pushed by rempt into branch 'master'.

Fix angle snapping with the bezier curve selection tool

M  +1    -1    libs/basicflakes/tools/KoCreatePathTool.h

https://invent.kde.org/graphics/krita/commit/c8af27317cd43f9547a9ce11e9be82a835d9a081
Comment 2 tomtomtomreportingin 2021-08-30 13:06:17 UTC
This issue still isn't resolved as there's a type mismatch in the lines linked above, breaking the snapping functionality.
Comment 3 Bug Janitor Service 2021-08-30 13:06:52 UTC
A possibly relevant merge request was started @ https://invent.kde.org/graphics/krita/-/merge_requests/1027
Comment 4 tomtomtomreportingin 2021-08-30 16:09:16 UTC
Git commit 1013936517d9395b5339e98c9963b1a52a66fa31 by Tom Tom, on behalf of Tom Tom Tom.
Committed on 30/08/2021 at 16:05.
Pushed by deiflou into branch 'master'.

Fix some sig/slot connections related to angle selector refactor

M  +2    -2    libs/basicflakes/tools/KoCreatePathTool.h
M  +0    -3    plugins/tools/karbonplugins/tools/CalligraphyTool/KarbonCalligraphyOptionWidget.cpp

https://invent.kde.org/graphics/krita/commit/1013936517d9395b5339e98c9963b1a52a66fa31