Fix angle snapping with the bezier curve selection tool

BUG:431336